// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldName renders a geo field 1`] = `
Array [
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero kbnDocViewer__fieldIcon"
  >
    <span
      class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis5"
    >
      <span
        data-euiicon-type="tokenGeo"
        title="Geo point field"
      >
        Geo point field
      </span>
    </span>
  </div>,
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--wrap"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero kbnDocViewer__fieldName eui-textBreakAll"
    >
      <span
        class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
      >
        <span>
          test.test.test
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`FieldName renders a number field by providing a field record 1`] = `
Array [
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero kbnDocViewer__fieldIcon"
  >
    <span
      class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
    >
      <span
        data-euiicon-type="tokenNumber"
        title="Number field"
      >
        Number field
      </span>
    </span>
  </div>,
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--wrap"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero kbnDocViewer__fieldName eui-textBreakAll"
    >
      <span
        class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
      >
        <span>
          test.test.test
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`FieldName renders a string field by providing fieldType and fieldName 1`] = `
Array [
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero kbnDocViewer__fieldIcon"
  >
    <span
      class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis1"
    >
      <span
        data-euiicon-type="tokenString"
        title="String field"
      >
        String field
      </span>
    </span>
  </div>,
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--wrap"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero kbnDocViewer__fieldName eui-textBreakAll"
    >
      <span
        class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
      >
        <span>
          test
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`FieldName renders unknown field 1`] = `
Array [
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero kbnDocViewer__fieldIcon"
  >
    <span
      class="euiToken kbnFieldIcon emotion-euiToken-circle-light-s-gray"
    >
      <span
        data-euiicon-type="questionInCircle"
        title="Unknown field"
      >
        Unknown field
      </span>
    </span>
  </div>,
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--wrap"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero kbnDocViewer__fieldName eui-textBreakAll"
    >
      <span
        class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
      >
        <span>
          test.test.test
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`FieldName renders when mapping is provided 1`] = `
Array [
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero kbnDocViewer__fieldIcon"
  >
    <span
      class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
    >
      <span
        data-euiicon-type="tokenNumber"
        title="Number field"
      >
        Number field
      </span>
    </span>
  </div>,
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--wrap"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero kbnDocViewer__fieldName eui-textBreakAll"
    >
      <span
        class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
      >
        <span>
          bytes
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`FieldName renders with a search highlight 1`] = `
Array [
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero kbnDocViewer__fieldIcon"
  >
    <span
      class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
    >
      <span
        data-euiicon-type="tokenNumber"
        title="Number field"
      >
        Number field
      </span>
    </span>
  </div>,
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--wrap"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero kbnDocViewer__fieldName eui-textBreakAll"
    >
      <span
        class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
      >
        <span>
          <mark
            class="euiMark emotion-euiMarkStyles-EuiMark"
          >
            te
          </mark>
          st.test.test
        </span>
      </span>
    </div>
  </div>,
]
`;
